<resources>


    <string name="error_enter_field">Please enter this field</string>

    <!-- Activity main page -->
    <string name="app_name">HospitalApp_ArbellayGlassey</string>
    <string name="btn_list_of_patient">List of patients</string>
    <string name="btn_list_of_medicine">List of medicine</string>
    <string name="btn_settings">Settings</string>
    <string name="main_activity_title">Hospital App</string>

    <!-- Title of the application -->
    <string name="title_list_of_patient">List of patient</string>
    <string name="title_new_patient">New patient</string>
    <string name="title_settings">Settings</string>
    <string name="title_treatment">Treatment</string>
    <string name="title_medecine">Medecine</string>
    <string name="title_add_medecine">Add medecine</string>
    <string name="title_new_medecine">New medecine</string>
    <string name="title_patient">Patient</string>
    <string name="title_settings_about">About</string>
    <string name="title_settings_theme">Theme</string>
    <string name="title_settings_language">Language</string>


    <!-- Label of the application -->
    <string name="label_name">Name</string>
    <string name="label_age">Age</string>
    <string name="label_gender">Gender (F/M)</string>
    <string name="label_room">Room</string>
    <string name="label_blood_group">Blood Group</string>
    <string name="label_reasons_admission">Reason of Admission</string>
    <string name="list_of_medecine">List of Medecine</string>
    <string name="label_type_medecine">Type</string>
    <string name="label_active_ingredient">Active Ingredient</string>
    <string name="label_manufacturer">Manufacturer</string>
    <string name="label_side_effect">Side effects</string>
    <string name="label_max_per_day">Max per day</string>
    <string name="label_application_medecine">Application</string>
    <string name="label_list_of_medecine">List of all medecine</string>
    <string name="label_quantity">Quantity</string>


    <!-- Buttons of the application -->
    <string name="btn_ok">Ok</string>
    <string name="btn_show_treatment">Show treatment</string>
    <string name="btn_chosen_language">Chosen language</string>
    <string name="btn_modify_treatment">Save modifications</string>
    <string name="btn_modify_patient">Save modifications</string>
    <string name="btn_modify_medecine">Save modifications</string>
    <string name="btn_add_medecine_to_list_treatment">Add a medecine to this treatment</string>
    <string name="label_settings_language">Language</string>
    <string name="label_settings_About">About</string>
    <string name="btn_label_settings_background">Background</string>
    <string name="btnSettingsTheme">Theme</string>

    <!-- All title of the action bar -->
    <string name="actionbar_title_listPatient">List of Patient</string>

    <!-- Errors -->
    <string name="Error_fill_this_fields">Please fill this field</string>

    <!-- About -->
    <string name="txt_about">This application was developped by 2 students in the HES-SO Valais/Wallis. The goal of this application is to provide to the nurse the possiblity to manage the data of their patients with their treatment and medecine.</string>

    <!-- Name of the image-->
    <string name="logo_hospital">Logo hospital</string>
    <string name="btn_add_newPatient">Add a patient</string>


    <!-- Virtual list of patient -->
    <string-array name="patient_array">
        <item>Olivier Arbellay</item>
        <item>Aurélie Glassey</item>
        <item>Quentin Remion</item>
        <item>Jon Chou</item>
        <item>Julien Reich</item>
        <item>Jaufray Reich</item>
        <item>Endrit Reich</item>
        <item>Bryan Reich</item>
        <item>Lolo Lamberti</item>
        <item>Kiki Duay</item>
        <item>Daniela Louren </item>
        <item>Dolfi Reich</item>
    </string-array>

    <!-- Virtual list of Language-->
    <string-array name="language_array">
        <item>English</item>
        <item>Français</item>
    </string-array>


    <!-- Virtual list of medecine-->
    <string-array name="medecine_array">
        <item>Dafalgan</item>
        <item>NeoCitran</item>
        <item>Aspirine</item>
        <item>Irfen</item>
        <item>Buscopan</item>
        <item>Buscopan</item>
        <item>Buscopan</item>
        <item>Buscopan</item>
        <item>Buscopan</item>
        <item>Buscopan</item>
        <item>Buscopan</item>
        <item>Buscopan</item>
        <item>Buscopan</item>
        <item>Buscopan</item>
        <item>Buscopan</item>
        <item>Buscopan</item>
        <item>Buscopan</item>
    </string-array>
    <string name="btn_Language_English" translatable="false">English</string>
    <string name="btn_Language_French" translatable="false">Français</string>

</resources>
