<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAppBackgroud"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context=".MedecineDetails">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/labelNameMedecineDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/colorGreyButton" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <!-- Name -->

                <TextView
                    android:id="@+id/textNameMedecineDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="dafalgan"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

                <ImageView
                    android:id="@+id/editMedecineDetails"
                    android:layout_width="137dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_mode_edit_black" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_weight="1" />


            <!-- Type -->
            <TextView
                android:id="@+id/labelTypeMedecineDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_type_medecine"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/colorGreyButton"
                android:textSize="12sp" />/>


            <TextView
                android:id="@+id/textTypeMedecineDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Analgesic"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_weight="1" />

            <!-- Active ingredient -->
            <TextView
                android:id="@+id/labelActiveIngredientMedecineDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_active_ingredient"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/colorGreyButton"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textActiveIngredientMedecineDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Paracetamol"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_weight="1" />


            <!-- Manufacturer -->
            <TextView
                android:id="@+id/labelManufacturerMedecineDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_manufacturer"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/colorGreyButton"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textManufacturerMedecineDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Brisol-myers"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />


            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_weight="1" />


            <!-- Side Effect -->
            <TextView
                android:id="@+id/labelSideEffectMedecineDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_side_effect"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/colorGreyButton"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textSideEffectMedecineDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Sickness"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />


            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_weight="1" />


            <!-- Max per day -->
            <TextView
                android:id="@+id/labelMaxDayMedecineDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_max_per_day"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/colorGreyButton"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textMaxDayMedecineDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="2"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />


            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_weight="1" />


            <!-- Application of medecine -->
            <TextView
                android:id="@+id/labelApplicationMedecineDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_application_medecine"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textApplicationMedecineDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Dilute in a glass of water"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>