<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAppBackgroud"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context=".MedecineModify">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/labelNameMedecineDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/colorGreyButton" />

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Modify name" />


            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_weight="1" />


            <!-- Type -->
            <TextView
                android:id="@+id/labelTypeMedecineDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_type_medecine"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/colorGreyButton"
                android:textSize="12sp" />/>


            <EditText
                android:id="@+id/editTextType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Modify type" />


            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_weight="1" />

            <!-- Active ingredient -->
            <TextView
                android:id="@+id/labelActiveIngredientMedecineDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_active_ingredient"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/colorGreyButton"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/editTextActiveIngredient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Modify active ingredient" />



            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_weight="1" />


            <!-- Manufacturer -->
            <TextView
                android:id="@+id/labelManufacturerMedecineDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_manufacturer"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/colorGreyButton"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/editTextManufacturer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Modify Manufacturer" />


            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_weight="1" />


            <!-- Side Effect -->
            <TextView
                android:id="@+id/labelSideEffectMedecineDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_side_effect"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/colorGreyButton"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/editTextSideEffect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Modify sides effects" />



            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_weight="1" />


            <!-- Max per day -->
            <TextView
                android:id="@+id/labelMaxDayMedecineDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_max_per_day"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/colorGreyButton"
                android:textSize="12sp" />


            <EditText
                android:id="@+id/editTextMaxDay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:text="Modify max"/>


            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_weight="1" />


            <!-- Application of medecine -->
            <TextView
                android:id="@+id/labelApplicationMedecineDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_application_medecine"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/editTextApplication"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Modify how to apply this medecine" />


            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_weight="1" />


            <!-- Layout for the button OK -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />


                <Button
                    android:id="@+id/buttonOkModifyMedecine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/generalbutton"
                    android:text="Save modifications" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_weight="1" />


            </LinearLayout>


        </LinearLayout>
    </ScrollView>


</LinearLayout>