<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout_main_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAppBackgroud"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <View
                android:layout_width="fill_parent"
                android:layout_height="80dp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <View
                    android:layout_width="190dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <!-- Button list of patient-->
                <Button
                    android:id="@+id/btn_mainActivity_listPatients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/generalbutton"
                    android:text="@string/btn_list_of_patient" />

                <View
                    android:layout_width="190dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="80dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <View
                    android:layout_width="190dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <!-- Button list of medecine-->
                <Button
                    android:id="@+id/btn_mainActivity_listMedecine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/generalbutton"
                    android:text="@string/btn_list_of_medicine" />

                <View
                    android:layout_width="190dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
            </LinearLayout>


            <View
                android:layout_width="fill_parent"
                android:layout_height="80dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <View
                    android:layout_width="190dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <!-- Button settings-->
                <Button
                    android:id="@+id/btn_mainActivity_Settings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/generalbutton"
                    android:text="@string/btn_settings" />

                <View
                    android:layout_width="190dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
            </LinearLayout>
        </LinearLayout>

    </FrameLayout>

    <!-- Nav bar-->
    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view_main"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/nav_drawer"/>


</android.support.v4.widget.DrawerLayout>